--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,9 +69,30 @@
       /* ============== */
       /* === footer === */
       /* ============== */
- footer {
-   background-color: #233c4f;
-   padding: 20px;
+
+#footer{
+  background-image: url(images-path('careeryouwant.jpg');
+  height: 400px;
+  margin-bottom: -15px;
+  width: 100%;
+}
+
+
+.learn-more {
+  position: relative;
+  text-align: center;
+  padding: 10px;
+}
+
+.learn-more .logo {
+  width: 60px;
+  height: 60px;
+}
+
+footer {
+  background-color: #233c4f;
+  padding: 20px;
+  width: 100%;
  }
 
 .footer-content{
