--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the simple_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+main {
+  margin-top: 80px;
+}
+
+.top {
+  text-align: center;
+}
+
+.main-header {
+  text-align: center;
+  color: black;
+}
+
+.search-box {
+  border: 1px solid #a7b1b9;;
+  border-radius: 15px;
+  padding: 5px 10px;
+  width: 35%;
+  height: 35px;
+}
