--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,8 +1,14 @@
 <% provide(:page_title, 'Edit #{@post.title}') %>
 
-<h1>Editing Post</h1>
+<div class="container create-post">
+  <h1>Editing Post</h1>
 
-<%= render 'form', post: @post %>
+  <div class="row">
+    <%= render 'form', post: @post %>
+  </div>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+  <div class="row back">
+    <%= link_to 'Show', @post %> |
+    <%= link_to 'Back', posts_path %>
+  </div>
+</div>
