--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,8 +3,13 @@
 <div class="container create-post">
   <h1>New Post</h1>
 
-  <%= render 'form', post: @post %>
+  <div class="row">
+    <%= render 'form', post: @post %>
+  </div>
 
-  <%= link_to 'Back', posts_path %>
+  <div class="row back">
+    <%= link_to 'Back', posts_path %>
+  </div>
+
 
 </div>
