--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,12 +2,15 @@
 
 <div class="container post-info">
   <div class="row">
-    <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2 text-xs-center">
-      <%= image_tag(@post.image_url, class: "img-responsive") %>
-      <h1><%= @post.title %></h1>
-      <%= @post.body %>
-    </div>
+    <%= image_tag(@post.image_url, class: "img-responsive") %>
+    <h1><%= @post.title %></h1>
+    <p><%= @post.body %></p>
   </div>
-  <%= link_to 'Edit', edit_post_path(@post) %> |
-  <%= link_to 'Back', posts_path %>
+
+  <div class="row links">
+    <%= link_to 'Edit', edit_post_path(@post) %> |
+    <%= link_to 'Back', posts_path %>
+    <%= link_to 'Remove', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+  </div>
+
 </div>
