--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -130,3 +130,11 @@
     background-color: #84e1da;
   }
 }
+
+/* === Search box === */
+
+.search-box {
+  color: black;
+  margin-bottom: 20px;
+  outline: none;
+}
