--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,2 +1,28 @@
-<h1>SimplePages#contact</h1>
-<p>Find me in app/views/simple_pages/contact.html.erb</p>
+
+<div class="container contact">
+
+  <div class="row">
+    <h1>Contact Us</h1>
+  </div>
+
+  <%= flash[:notice] %>
+
+  <%= form_with(url:"/simple_pages/thank_you", method: "post", local: true) do |form| %>
+  <div class="row">
+    <div class="form-group">
+      <%= form.label :name %>
+      <%= form.text_field :name, :required => true, class: "form-control", placeholder: "Enter Name" %>
+    </div>
+    <div class="form-group">
+      <%= form.label :email %>
+      <%= form.text_field :email, :required => true, class: "form-control", type:"email", placeholder: "Enter Email" %>
+    </div>
+    <div class="form-group">
+      <%= form.label :message %>
+      <%= form.text_area :message, :required => true, class: "form-control", placeholder: "Enter Message", rows: 5 %>
+    </div>
+  </div>
+  <%= form.submit "Send", class: "form_label" %>
+  <% end %>
+
+</div>
