--- a/app/views/simple_pages/thank_you.html.erb
+++ b/app/views/simple_pages/thank_you.html.erb
@@ -3,6 +3,6 @@
     <p>Thank you. We have received your message and will respond as soon as possible.</p>
   </div><!-- / panel-body -->
 
-  <button type="button" class:"btn btn-primary"><%= link_to 'Back', simple_pages_landing_page_path %></button>
+  <button type="button" class:"btn btn-primary"><%= link_to 'Back', posts_index_path %></button>
 
 </div><!-- / panel -->
