--- a/app/views/simple_pages/thank_you.html.erb
+++ b/app/views/simple_pages/thank_you.html.erb
@@ -1,8 +1,8 @@
-<div class="panel panel-default">
-  <div class="panel-body">
-    <p>Thank you. We have received your message and will respond as soon as possible.</p>
-  </div><!-- / panel-body -->
-
-  <button type="button" class:"btn btn-primary"><%= link_to 'Back', posts_index_path %></button>
-
-</div><!-- / panel -->
+<div class="container">
+  <h1>Thank you</h1>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <p> We have received your message and will respond as soon as possible.</p>
+    </div><!-- / panel-body -->
+  </div><!-- / panel -->
+</div>
