--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -33,3 +33,67 @@ header .carousel {
      }
    }
 }
+
+/* ===== devise ===== */
+
+.form-authentication {
+  margin: auto;
+  width: 350px;
+  margin-top: 80px;
+  margin-bottom: 10px;
+  box-shadow: 0 0 5px #5ea2b1;
+  background-color: white;
+  height: 500px;
+  .form-authentication-inner {
+    padding: 0 50px;
+    .form-heading {
+      color: #5ea2b1;
+      padding-top: 20px;
+      margin-bottom: 40px;
+      border-bottom: 1px solid #5ea2b1;
+    }
+    .input-group {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
+    .remember{
+      font-size: 12px;
+    }
+    .actions{
+      margin-top: 40px;
+      margin-bottom: 20px;
+      .login-button {
+        background-color: #5ea2b1;
+        border: none;
+      }
+      .login-button:hover {
+        background-color: #d0d2e0;
+      }
+      .login-button:focus {
+        outline: none;
+      }
+    }
+  }
+}
+
+.actions-signup {
+  margin-top: 40px;
+  margin-bottom: 20px;
+  .login-button {
+    background-color: #5ea2b1;
+    border: 1px solid white;
+  }
+  .login-button:hover {
+    background-color: #d0d2e0;
+  }
+  .login-button:focus {
+    outline: none;
+  }
+}
+
+.reset {
+  font-size: 12px;
+}
+.shared-link a {
+  color: #d0d2e0;
+}
