--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -17,9 +17,25 @@ main {
 }
 
 .search-box {
-  border: 1px solid #a7b1b9;;
+  border: 1px solid #a7b1b9;
   border-radius: 15px;
   padding: 5px 10px;
   width: 35%;
   height: 35px;
+}
+
+
+/* ==== thank you ====*/
+
+.thanks {
+  color: black;
+  margin-top: 100px;
+  .panel-default {
+    box-shadow: 0 0 5px #a7b1b9;
+    padding: 20px;
+    color: black;
+    .panel-body p {
+      color: black;
+    }
+  }
 }
