--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
-<h2>Sign up</h2>
+<div class="container form-authentication">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="row form-authentication-inner">
+    <div class="form-heading text-center">
+      <h2>Sign up</h2>
+    </div>
   </div>
 
-  <div class="field">
+  <div class="main-login">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
+
+    <%= f.label :email %><br/>
+    <div class="input-group">
+      <span class="input-group-addon">
+        <span class="glyphicon glyphicon-envelope"></span>
+      </span>
+      <%= f.email_field :email, autofocus: true, class: "form-control", autocomplete: "email", placeholder: "Email address" %>
+    </div>
+
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="input-group">
+      <span class="input-group-addon">
+        <span class="glyphicon glyphicon-lock" ></span>
+      </span>
+      <%= f.password_field :password, class: "form-control", autocomplete: "off" %>
+    </div>
 
-  <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="input-group">
+      <span class="input-group-addon">
+        <span class="glyphicon glyphicon-lock" ></span>
+      </span>
+      <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="actions-signup">
+      <%= f.submit "Sign up", class:"btn btn-primary btn-lg btn-block login-button" %>
+    </div>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <div class="shared-link">
+      <%= render "devise/shared/links" %>
+    </div>
+  </div>
+</div>
