--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -130,3 +130,44 @@
     background-color: #84e1da;
   }
 }
+
+/* ============= */
+/* === Comments === */
+/* ============= */
+
+.new-comment {
+  text-align: left;
+}
+
+.pagination{
+  margin: auto;
+  cursor: default;
+  border: 1px solid #aaaaaa;
+  text-align: center;
+  padding: 1em;
+  a, span {
+    padding: 0.2em 0.3em;
+  }
+  .disabled {
+   color: #aaaaaa;
+ }
+ .current {
+  color: white;
+  font-style: normal;
+  background-color: #84e1da;
+  display: inline-block;
+  width: 1.4em;
+  height: 1.4em;
+  line-height: 1.5;
+  -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  border-radius: 1em;
+  }
+  a {
+    text-decoration: none;
+    color: #233c4f;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+}
