--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -199,6 +199,15 @@ input {
   color: black;
 }
 
+/* ============= */
+/* === ALERT === */
+/* ============= */
+
 #alert {
   position: fixed;
+}
+
+.notice,
+.alert {
+  padding: 5px;
 }
